# heat-circuit

./: README.md  main.py  pyproject.toml
src/: main.py
src/heat_circuit/: __init__.py  graph.py  models.py  simulation.py  visualization.py
