[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heat-circuit"
version = "0.1.0"
description = "Thermal circuit network method simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/heat_circuit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]
